[gd_scene load_steps=26 format=2]

[ext_resource path="res://Game/Sprites/spr_coin_label.png" type="Texture" id=1]
[ext_resource path="res://Game/Graph.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Game Scripts/PriceLabel.gd" type="Script" id=3]
[ext_resource path="res://Game/Game Scripts/game_UI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Game/Game Scripts/Wallet.gd" type="Script" id=6]
[ext_resource path="res://Game/Game Scripts/CoinLabel.gd" type="Script" id=7]
[ext_resource path="res://Fonts/balances.tres" type="DynamicFont" id=8]
[ext_resource path="res://Game/Sprites/spr_sell.png" type="Texture" id=9]
[ext_resource path="res://Game/Sprites/spr_buy.png" type="Texture" id=10]
[ext_resource path="res://Game/letsgetthisschlattcoin.wav" type="AudioStream" id=11]
[ext_resource path="res://Game/Game Scripts/InvestmentsWindow.gd" type="Script" id=12]
[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Game/Game Scripts/Music.gd" type="Script" id=14]
[ext_resource path="res://Game/Game Scripts/Unmute.gd" type="Script" id=15]
[ext_resource path="res://Game/Game Scripts/Mute.gd" type="Script" id=16]
[ext_resource path="res://Fonts/windows.tres" type="DynamicFont" id=17]
[ext_resource path="res://Game/Game Scripts/InvestmentCounter.gd" type="Script" id=18]
[ext_resource path="res://Game/Game Scripts/Settings.gd" type="Script" id=19]
[ext_resource path="res://Game/Game Scripts/LastBought.gd" type="Script" id=20]
[ext_resource path="res://Game/Game Scripts/LastSold.gd" type="Script" id=21]
[ext_resource path="res://Game/Game Scripts/MusicVolumeSlider.gd" type="Script" id=22]
[ext_resource path="res://Game/Game Scripts/CommandHandler.gd" type="Script" id=23]

[sub_resource type="Theme" id=1]
Button/icons/ = null

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 13 )

[node name="Game" type="Node2D"]
position = Vector2( -97.1238, -88.9017 )
script = ExtResource( 4 )

[node name="Settings" type="WindowDialog" parent="."]
visible = true
margin_left = -453.234
margin_top = 237.594
margin_right = 84.7666
margin_bottom = 657.594
custom_fonts/title_font = ExtResource( 17 )
custom_colors/title_color = Color( 0, 0, 0, 1 )
window_title = "Settings"
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnmuteMusic" type="Button" parent="Settings"]
visible = false
margin_left = 241.57
margin_top = 302.295
margin_right = 522.57
margin_bottom = 351.295
custom_fonts/font = ExtResource( 8 )
text = "Unmute Music"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteMusic" type="Button" parent="Settings"]
margin_left = 14.0132
margin_top = 20.673
margin_right = 239.013
margin_bottom = 69.673
custom_fonts/font = ExtResource( 8 )
text = "Mute Music"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="Settings"]
margin_left = 20.6542
margin_top = 81.956
margin_right = 226.654
margin_bottom = 97.956
min_value = -80.0
max_value = 0.0
step = 0.001
value = -40.0
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTimer" type="Timer" parent="Settings/MusicVolume"]

[node name="Back" type="Button" parent="."]
margin_left = 1212.83
margin_top = 758.927
margin_right = 1353.84
margin_bottom = 824.927
custom_fonts/font = ExtResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="."]
margin_left = 812.226
margin_top = 264.928
margin_right = 954.226
margin_bottom = 339.928
custom_fonts/font = ExtResource( 5 )
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground" type="Polygon2D" parent="Buy"]
show_behind_parent = true
position = Vector2( 3.37158, 3.16006 )
scale = Vector2( 0.224601, 0.352361 )
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
polygon = PoolVector2Array( 0, 0, 600, 0, 600, 200, 0, 200 )

[node name="Sell" type="Button" parent="."]
margin_left = 965.718
margin_top = 269.76
margin_right = 1150.72
margin_bottom = 338.76
custom_fonts/font = ExtResource( 5 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground2" type="Polygon2D" parent="Sell"]
show_behind_parent = true
position = Vector2( 1.40894, -0.963867 )
scale = Vector2( 0.29895, 0.352361 )
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
polygon = PoolVector2Array( 0, 0, 600, 0, 600, 200, 0, 200 )

[node name="Wallet" type="Label" parent="."]
margin_left = 782.416
margin_top = 165.668
margin_right = 987.416
margin_bottom = 258.668
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.866667, 0, 1 )
text = "Balance"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalletTimer" type="Timer" parent="Wallet"]
wait_time = 0.001
autostart = true

[node name="CoinLabel" type="Label" parent="."]
margin_left = 1117.3
margin_top = 169.831
margin_right = 1232.3
margin_bottom = 229.831
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Coin"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Sprite" parent="CoinLabel"]
position = Vector2( -41.9912, 29.3699 )
scale = Vector2( 0.172218, 0.172218 )
texture = ExtResource( 1 )

[node name="PriceLabel" type="Label" parent="."]
margin_left = 131.66
margin_top = 367.355
margin_right = 262.66
margin_bottom = 427.355
rect_pivot_offset = Vector2( -1.51562, 2.49689 )
custom_fonts/font = ExtResource( 5 )
text = "Price"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceGenerator" type="Timer" parent="PriceLabel"]
wait_time = 5.0
autostart = true

[node name="InvestmentCounter" type="Label" parent="."]
margin_left = 127.609
margin_top = 432.872
margin_right = 502.609
margin_bottom = 475.872
custom_fonts/font = ExtResource( 8 )
text = "Investment Counter"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastBought" type="Label" parent="."]
margin_left = 126.345
margin_top = 480.367
margin_right = 408.345
margin_bottom = 523.367
custom_fonts/font = ExtResource( 8 )
text = "Last bought at "
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastSold" type="Label" parent="."]
margin_left = 128.103
margin_top = 526.367
margin_right = 410.103
margin_bottom = 569.367
custom_fonts/font = ExtResource( 8 )
text = "Last sold at "
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graph" parent="." instance=ExtResource( 2 )]
position = Vector2( 126.879, 128.382 )
points = PoolVector2Array( 517.163, -90.9692 )
graph_width = 600.0
graph_height = 200.0
graph_max_points = 50
grow = true

[node name="Border" type="Polygon2D" parent="Graph"]
show_behind_parent = true
position = Vector2( -7, -6.43198 )
scale = Vector2( 1.02283, 1.09719 )
color = Color( 0.976471, 0.976471, 0.976471, 1 )
polygon = PoolVector2Array( 0, 0, 600, 0, 600, 200, 0, 200 )

[node name="Background" type="Polygon2D" parent="Graph"]
show_behind_parent = true
position = Vector2( -1.54972e-06, -1.75809 )
scale = Vector2( 1.00227, 1.04707 )
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
polygon = PoolVector2Array( 0, 0, 600, 0, 600, 200, 0, 200 )

[node name="Save" type="Button" parent="."]
margin_left = 1225.35
margin_top = 682.438
margin_right = 1346.35
margin_bottom = 740.438
custom_fonts/font = ExtResource( 8 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 976.162
margin_top = 758.499
margin_right = 1200.16
margin_bottom = 824.499
custom_fonts/font = ExtResource( 5 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
script = ExtResource( 14 )

[node name="InvestmentsWindow" type="WindowDialog" parent="."]
visible = true
margin_left = 482.102
margin_top = 869.012
margin_right = 952.102
margin_bottom = 1124.01
theme = SubResource( 1 )
custom_fonts/title_font = ExtResource( 17 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close Button" type="Button" parent="InvestmentsWindow"]
margin_left = 16.7731
margin_top = 195.755
margin_right = 129.773
margin_bottom = 244.755
custom_fonts/font = ExtResource( 8 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unavailable" type="Label" parent="InvestmentsWindow"]
margin_left = 20.0391
margin_top = 7.65961
margin_right = 446.039
margin_bottom = 199.66
custom_fonts/font = SubResource( 2 )
text = "Currently, investments are unavailable. Please check back when you are eligible for investments (At balance of $1000)"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test" type="Label" parent="InvestmentsWindow"]
visible = false
margin_left = 33.785
margin_top = 32.1762
margin_right = 181.785
margin_bottom = 75.1762
custom_fonts/font = ExtResource( 8 )
text = "Yes yes "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invest" type="Button" parent="InvestmentsWindow"]
visible = false
margin_left = 320.957
margin_top = 187.989
margin_right = 447.957
margin_bottom = 236.989
custom_fonts/font = ExtResource( 8 )
text = "Invest"

[node name="Investments" type="Button" parent="."]
margin_left = 113.15
margin_top = 756.129
margin_right = 443.15
margin_bottom = 822.129
custom_fonts/font = ExtResource( 5 )
text = "Investments"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandHandler" type="Node" parent="."]
script = ExtResource( 23 )
[connection signal="pressed" from="Settings/UnmuteMusic" to="AudioStreamPlayer" method="_on_UnmuteMusic_pressed"]
[connection signal="pressed" from="Settings/UnmuteMusic" to="Settings/UnmuteMusic" method="_on_UnmuteMusic_pressed"]
[connection signal="pressed" from="Settings/UnmuteMusic" to="Settings/MuteMusic" method="_on_UnmuteMusic_pressed"]
[connection signal="pressed" from="Settings/MuteMusic" to="AudioStreamPlayer" method="_on_MuteMusic_pressed"]
[connection signal="pressed" from="Settings/MuteMusic" to="Settings/UnmuteMusic" method="_on_MuteMusic_pressed"]
[connection signal="pressed" from="Settings/MuteMusic" to="Settings/MuteMusic" method="_on_MuteMusic_pressed"]
[connection signal="timeout" from="Settings/MusicVolume/MusicTimer" to="Settings/MusicVolume" method="_on_MusicTimer_timeout"]
[connection signal="pressed" from="Back" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Sell" to="." method="_on_Sell_pressed"]
[connection signal="timeout" from="Wallet/WalletTimer" to="." method="_on_WalletTimer_timeout"]
[connection signal="timeout" from="PriceLabel/PriceGenerator" to="." method="_on_PriceGenerator_timeout"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="SettingsButton" to="Settings" method="_on_Settings_pressed"]
[connection signal="pressed" from="InvestmentsWindow/Close Button" to="InvestmentsWindow" method="_on_Close_Button_pressed"]
[connection signal="pressed" from="Investments" to="InvestmentsWindow" method="_on_Investments_pressed"]
